# gei_core

./: .gitignore  README.md  pyproject.toml
gei_core/: settings.py  urls.py
gei_core/decorators/: __init__.py  datatable.py  my_api_view.py
gei_core/managers/: __init__.py  my_manager.py
gei_core/models/: __init__.py  my_model.py
gei_core/serializers/: __init__.py  my_serializer.py
gei_core/services/: __init__.py  my_service.py
gei_core/utils/: __init__.py  api_utils.py  debug_helper.py  model_utils.py  queryset_filters.py  urls_utils.py
gei_core/views/: __init__.py  my_views.py  views.py
