[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gei-core"
version = "0.1.0"
authors = [
  { name="bruno-mastropietro", email="bruno.mastropietro@necta.ar" },
]
description = "Framework core base para proyectos Django relacionados a gei"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Django",
]
# Aquí pones las librerías que tu framework necesita sí o sí para funcionar
dependencies = [
    "asgiref==3.11.1"
    "attrs==26.1.0"
    "Django==6.0.5"
    "django-phonenumber-field==8.4.0"
    "djangorestframework==3.17.1"
    "drf-spectacular==0.29.0"
    "inflection==0.5.1"
    "jsonschema==4.26.0"
    "jsonschema-specifications==2025.9.1"
    "phonenumbers==9.0.29"
    "psycopg2-binary==2.9.12"
    "PyYAML==6.0.3"
    "referencing==0.37.0"
    "rpds-py==2026.5.1"
    "sqlparse==0.5.5"
    "typing_extensions==4.15.0"
    "uritemplate==4.2.0"
]

[tool.setuptools.packages.find]
include = ["gei_core*"]  # Le dice a setuptools qué carpeta empaquetar